--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,14 +1,40 @@
+img {
+  border-radius : 50%
+}
+
 body{
-  font-family: sans-serif;
-  font-size:110%;
+  font-family: serif;
+  font-size:120%;
   background-color: #FCF7F8;
 }
 
+.article{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.mainSection{
+  background-color: darkslategray;
+  color: whitesmoke;
+}
+
+#sidebar{
+  width: 15%;
+  background-color: mediumseagreen
+}
+
+.exLink{
+  background-color: lime;
+}
+.navMenu{
+  list-style-type: none;
+}
 header {
   text-align: center;
+  background-color: black;
+  color: whitesmoke
 }
 
 footer {
-  background-color: #343330;
+  background-color: grey;
   text-align: center;
 }
